[tool.poetry]
name = "jumble"
version = "0.1.0"
description = "Python implementation of the classic scrambled word game"
authors = ["badr ben mbarek <badr.benb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandas = "^1.5.2"
plotly = "^5.11.0"
pylint = "^2.15.9"
fuzzywuzzy = "^0.18.0"
tenacity = "^8.1.0"
tqdm = "^4.64.1"
python-levenshtein = "^0.20.9"
autoflake = "^2.0.0"
pydantic = "^1.10.3"
sqlalchemy = "^1.4.45"
alembic = "^1.9.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
